[gd_scene load_steps=8 format=3 uid="uid://build_menu_ui"]

[ext_resource type="Script" path="res://building/build_menu_ui.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.02, 0.05, 0.1, 0.95)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0.8, 1, 0.4)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0, 0.7)
shadow_size = 40
shadow_offset = Vector2(0, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_header"]
bg_color = Color(0.1, 1, 1, 0.05)
border_width_bottom = 1
border_color = Color(1, 1, 1, 0.1)
corner_radius_top_left = 4
corner_radius_top_right = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_search"]
bg_color = Color(1, 1, 1, 0.03)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 0.1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tab_active"]
bg_color = Color(0, 0.8, 1, 0.2)
border_width_bottom = 3
border_color = Color(0, 0.8, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tab_inactive"]
bg_color = Color(0, 0, 0, 0)
border_width_bottom = 1
border_color = Color(1, 1, 1, 0.1)

[sub_resource type="LabelSettings" id="LabelSettings_section"]
font_size = 14
font_color = Color(0, 0.8, 1, 0.8)
outline_size = 2
outline_color = Color(0, 0, 0, 0.5)

[node name="BuildMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -350.0
offset_right = 500.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="VBox" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Header" type="Panel" parent="Background/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_header")

[node name="CategoryTabs" type="TabBar" parent="Background/VBox/Header"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -20.0
offset_right = 300.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 40
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_tab_active")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_tab_inactive")
tab_count = 5
tab_alignment = 1
tab_0/title = "STRUCTURES"
tab_1/title = "FACILITIES"
tab_2/title = "FURNITURE"
tab_3/title = "UTILITY"
tab_4/title = "BLUEPRINTS"

[node name="SubHeader" type="Control" parent="Background/VBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="SubCategoryTabs" type="TabBar" parent="Background/VBox/SubHeader"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -20.0
offset_right = 400.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 30
tab_count = 5
tab_alignment = 1
tab_0/title = " FOUNDATIONS "
tab_1/title = " WALLS "
tab_2/title = " FLOOR/ROOF "
tab_3/title = " STAIRS "
tab_4/title = " DOORS/WINDOWS "

[node name="Content" type="ScrollContainer" parent="Background/VBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="Margin" type="MarginContainer" parent="Background/VBox/Content"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="MainVBox" type="VBoxContainer" parent="Background/VBox/Content/Margin"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 25

[node name="Footer" type="Control" parent="Background/VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Divider" type="ColorRect" parent="Background/VBox/Footer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
color = Color(1, 1, 1, 0.1)

[node name="SearchContainer" type="HBoxContainer" parent="Background/VBox/Footer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -25.0
offset_right = 250.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="SearchBar" type="LineEdit" parent="Background/VBox/Footer/SearchContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_search")
placeholder_text = "Search structures..."
alignment = 1

[node name="ManageShare" type="Button" parent="Background/VBox/Footer"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -20.0
offset_right = -50.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.7)
text = "Manage Share"

[node name="BuildingRating" type="Control" parent="Background"]
layout_mode = 1
anchors_preset = 0
offset_left = -120.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = 65.0
